--- a/Css/navAndFooter.css
+++ b/Css/navAndFooter.css
@@ -44,6 +44,10 @@ nav ul{
     flex-flow: column;
     
 }
+.navdrop{
+    display: flex;
+    flex-flow: column;
+}
 footer{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -124,6 +128,10 @@ footer h2{
     }
     nav section h1{
         font-size: 40px;
+    }
+    .navdrop{
+        display: flex;
+        flex-direction: row;
     }
 }
 
